[package]
name = "rustls-example"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.6", features = ["rustls-0_23"] }
actix-files = "0.6"

env_logger = "0.11"
log = "0.4"
rustls = "0.23"
rustls-pemfile = "2"
actix-cors = "0.7.0"
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
